# wvcr

./: .env.example  .gitignore  README.md  REFACTORING.md  TRANSCRIBE_URL_USAGE.md  pyproject.toml  setup.cfg  test_transcribe_url.py
.github/: copilot-instructions.md
docs/: components.md
examples/standalone/: audio_player.py  config.py
src/wvcr/: common.py  config.py  ipc_recorder.py  main.py  messages.py  notification_manager.py  openai_client.py  player.py  recorder.py  test_audio.py  voiceover.py
src/wvcr/cli/: __init__.py  config.py  config.yaml  main.py  runtime.py
src/wvcr/cli/pipelines/: __init__.py  explain.py  placeholders.py  transcribe.py  transcribe_url.py
src/wvcr/config/: __init__.py  audio.py  env.py  hydra_schemas.py  providers.py
src/wvcr/ipc/: __init__.py  audio_ipc.py  ipc_mic_handler.py  ipc_recorder.py
src/wvcr/modes/: __init__.py  answer_mode.py  base.py  explain_mode.py  factory.py  transcribe_mode.py  transcribe_url_mode.py  voiceover_mode.py
src/wvcr/modes2/: explain_pipeline_mode.py  transcribe_pipeline_mode.py  transcribe_url_pipeline_mode.py  voiceover_pipeline_mode.py
src/wvcr/pipeline/: __init__.py  context.py  pipeline.py  state.py  step.py
src/wvcr/pipeline/steps/: configure_recording.py  copy_to_clipboard.py  download_audio_step.py  explain_text_step.py  finalize.py  init_state.py  io_steps.py  lifecycle_steps.py  notify.py  paste_from_clipboard.py  play_tts.py  prepare_output_path.py  record_audio.py  save_explanation.py  save_transcript.py  set_key_from_arg.py  transcribe_audio_step.py
src/wvcr/services/: __init__.py  clipboard.py  download_service.py  file_service.py  text_processing_service.py  transcription_service.py  tts_service.py  vad.py
src/wvcr/standalone/: activity_manager.py  events_reader.py  standalone_client.py
tests/: conftest.py  test_notification.py  test_player.py  test_recorder.py  test_transcription.py
wvcr/: common.py  config.py  main.py  messages.py  notification_manager.py  openai_client.py  recorder.py
(+1 files in other folders)
