[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wvcr"
version = "0.1.0"
authors = [
    {name = "Your Name"}
]
description = "Voice recording and transcription tool"
requires-python = ">=3.9"
dependencies = [
    "pyaudio",
    "loguru",
    "openai",
    "wave",
    "pyperclip",
]

[project.scripts]
wvcr = "wvcr.main:main"

[tool.hatch.build.targets.wheel]
packages = ["wvcr"]

[tool.hatch.build]
artifacts = [
    "data/",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]