[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wvcr"
version = "0.1.0"
authors = [
    {name = "Your Name"}
]
description = "Voice recording and transcription tool"
requires-python = ">=3.9"
dependencies = [
    "pyaudio",
    "loguru",
    "openai",
    "wave",
    "pyperclip",
    "pynput",
    "python-dotenv",
    "plyer"
]

[project.optional-dependencies]
wayland = ["evdev"]

[project.scripts]
wvcr = "wvcr.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["wvcr"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "."
]
